# ApiCar

./: .env.example  .gitignore  ANALISE_CATCAR.md  CRAWL-TUTORIAL.md  alembic.ini  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run_crawl.py  run_crawl_brands.py  run_crawl_http.py  run_crawl_resilient.py  test_crawl_dry_run.py  vw-golf-parts-snapshot.yaml  vw-models-snapshot.yaml
.playwright-cli/: page-2026-03-13T11-33-13-068Z.yml  page-2026-03-13T11-34-20-536Z.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: dependencies.py  exceptions.py  main.py
app/cache/: redis_cache.py
app/schemas/: brand.py  model.py  pagination.py  part.py
app/services/: brand_service.py  crawl_service.py  model_service.py  parts_service.py
crawler/: browser.py  engine.py  rate_limiter.py  state.py  tasks.py  utils.py  worker.py
crawler/parsers/: base.py  brand_models.py  brand_navigation.py  categories.py  homepage.py  link_models.py  market_selection.py  model_years.py  parts.py  parts_html.py  subgroups.py
crawler/validators/: brand.py  model.py  part.py
docker/: Dockerfile.api  Dockerfile.crawler  Dockerfile.crawler-http  Dockerfile.dev  Dockerfile.worker
docs/: ARCHITECTURE.md  CONTINUATION-GUIDE.md  CRAWL-OPERATIONS.md  DATABASE-SCHEMA.md  PARSERS-REFERENCE.md  PROJECT-STATUS.md  VPS-DEPLOY-GUIDE.md
scripts/: backup-level.sh  backup.sh  deploy.sh  restore.sh  status.sh  vps-setup.sh
shared/: config.py  database.py  logging.py  utils.py
tests/: conftest.py  test_brand_parsers.py
(+54 files in other folders)
