[project]
name = "api-car"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "redis>=5.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "slowapi>=0.1",
]
crawler = [
    "playwright>=1.44",
    "arq>=0.26",
]
dev = [
    "api-car[api,crawler]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "import-linter>=2.0",
    "ruff>=0.4",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = ["PYTHONUTF8=1"]

[tool.importlinter]
root_packages = ["shared", "app", "crawler"]

[[tool.importlinter.contracts]]
name = "app does not import crawler"
type = "forbidden"
source_modules = ["app"]
forbidden_modules = ["crawler"]

[[tool.importlinter.contracts]]
name = "crawler does not import app"
type = "forbidden"
source_modules = ["crawler"]
forbidden_modules = ["app"]
